--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,67 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title>
-      Blank
+      Ionic 5 SQLite
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content padding text-center>
+  <ion-button expand="block" (click)="createDB()">
+    Create DataBase
+  </ion-button>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-button expand="block" (click)="createTable()">
+    Create Table
+  </ion-button>
+
+  <ion-button expand="block" (click)="getRows()">
+    Get Rows
+  </ion-button>
+
+  <ion-item-divider>
+    <ion-input placeholder="Enter Name" [(ngModel)]="name_model">
+    </ion-input>
+    <ng-container *ngIf="updateActive; else elseTemplateUpdate">
+      <ion-button expand="block" (click)="updateRow()">
+        Update Row
+      </ion-button>
+    </ng-container>
+    <ng-template #elseTemplateUpdate>
+      <ion-button expand="block" (click)="insertRow()">
+        Insert Row
+      </ion-button>
+    </ng-template>
+  </ion-item-divider>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        Row ID
+      </ion-col>
+      <ion-col>
+        Name
+      </ion-col>
+      <ion-col>
+        Delete
+      </ion-col>
+    </ion-row>
+    <ion-row *ngFor="let item of row_data">
+      <ion-col>
+        {{item.pid}}
+      </ion-col>
+      <ion-col>
+        {{item.Name}}
+      </ion-col>
+      <ion-col>
+        <ion-button (click)="deleteRow(item)" size="small" color="danger">
+          <ion-icon name="trash"></ion-icon>
+        </ion-button>
+        <ion-button (click)="enableUpdate(item)" size="small" color="warning">
+          <ion-icon name="create"></ion-icon>
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
